--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 *.log
+.utmp/
+SaveTheBaby/[Ll]ibrary/
+SaveTheBaby/[Tt]emp/
+SaveTheBaby/[Oo]bj/
+SaveTheBaby/[Bb]uild/
+SaveTheBaby/[Bb]uilds/
+SaveTheBaby/[Ll]ogs/
+SaveTheBaby/[Uu]ser[Ss]ettings/
+*.log
 
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
